codex-rs/core/tests/suite/snapshots/core_thread_state__suite__compact__manual_compact_with_history_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Manual /compact with prior user history compacts existing history and the follow-up turn includes the compact summary plus new user message.\",\n&[(\"Local Compaction Request\", &requests[1]),\n(\"Local Post-Compaction History Layout\", &requests[2]),])"
---
Scenario: Manual /compact with prior user history compacts existing history and the follow-up turn includes the compact summary plus new user message.

## Local Compaction Request
00:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
03:message/developer:<NO_TEXT>
04:message/developer:<personality_spec>Use the following communication style for futu...
05:message/user:first manual turn: do not modify X
06:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
07:message/assistant:FIRST_REPLY
08:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <personality_spec>Use the following communication style for futu...
    [03] <skills_usage_instructions>\n## How to use skills\n- Use the sma...
01:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
02:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user[2]:
    [01] <COMPACTION_SUMMARY>\nFIRST_MANUAL_SUMMARY
    [02] {"version":1,"kind":"local_compaction_text_recovery","artifact_i...
04:message/user:first manual turn: do not modify X
05:message/user:second manual turn
06:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
