codex-rs/core/tests/suite/snapshots/core_thread_state__suite__compact__manual_compact_without_prev_user_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Manual /compact with no prior user turn currently still issues a compaction request; follow-up turn carries canonical context and the new user message.\",\n&[(\"Local Compaction Request\", &requests[0]),\n(\"Local Post-Compaction History Layout\", &requests[1]),])"
---
Scenario: Manual /compact with no prior user turn currently still issues a compaction request; follow-up turn carries canonical context and the new user message.

## Local Compaction Request
00:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <personality_spec>Use the following communication style for futu...
    [03] <skills_usage_instructions>\n## How to use skills\n- Use the sma...
01:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
02:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user:<COMPACTION_SUMMARY>\nMANUAL_EMPTY_SUMMARY
04:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <personality_spec>Use the following communication style for futu...
    [03] <skills_usage_instructions>\n## How to use skills\n- Use the sma...
05:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
06:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
07:message/user:AFTER_MANUAL_EMPTY_COMPACT
08:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
