codex-rs/core/tests/suite/snapshots/core_thread_state__suite__compact__mid_turn_compaction_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"True mid-turn continuation compaction after tool output: compact request includes tool artifacts, and the continuation request includes the summary in the same turn.\",\n&[(\"Local Compaction Request\", &auto_compact_mock.single_request()),\n(\"Local Post-Compaction History Layout\",\n&post_auto_compact_mock.single_request()),])"
---
Scenario: True mid-turn continuation compaction after tool output: compact request includes tool artifacts, and the continuation request includes the summary in the same turn.

## Local Compaction Request
00:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
03:message/developer:<NO_TEXT>
04:message/developer:<personality_spec>Use the following communication style for futu...
05:message/user:function call limit push
06:message/developer:<tool_search_sources>\n- Deferred built-in or extension tools (n...
07:function_call/test_tool
08:function_call_output:unsupported call: test_tool. No tool was run. Use an exact name ...
09:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/developer[4]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <configured_developer_instructions state="removed" />
    [03] <personality_spec>Use the following communication style for futu...
    [04] <skills_usage_instructions>\n## How to use skills\n- Use the sma...
01:message/developer:<multi_agent_usage_hint state="removed" />
02:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
03:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
04:function_call/test_tool
05:function_call_output:unsupported call: test_tool. No tool was run. Use an exact name ...
06:message/user:<COMPACTION_SUMMARY>\nAUTO_SUMMARY
07:message/developer:<tool_search_sources>\n- Deferred built-in or extension tools (n...
