codex-rs/core/tests/suite/snapshots/core_thread_state__suite__compact__pre_sampling_model_switch_compaction_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Pre-sampling compaction on model switch to a smaller context window: current behavior compacts using prior-turn history only (incoming user message excluded), and the follow-up request carries compacted history plus the new user message.\",\n&[(\"Initial Request (Previous Model)\", &requests[0]),\n(\"Pre-sampling Compaction Request\", &requests[1]),\n(\"Post-Compaction Follow-up Request (Next Model)\", &requests[2]),])"
---
Scenario: Pre-sampling compaction on model switch to a smaller context window: current behavior compacts using prior-turn history only (incoming user message excluded), and the follow-up request carries compacted history plus the new user message.

## Initial Request (Previous Model)
00:message/developer[4]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <configured_developer_instructions state="removed" />
    [03] <personality_spec>Use the following communication style for futu...
    [04] <skills_usage_instructions>\n## How to use skills\n- Use the sma...
01:message/developer:<multi_agent_usage_hint state="removed" />
02:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
03:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
04:message/user:before switch
05:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
06:message/developer:<tool_search_sources>\n- Deferred built-in or extension tools (n...

## Pre-sampling Compaction Request
00:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
03:message/developer:<NO_TEXT>
04:message/developer:<personality_spec>Use the following communication style for futu...
05:message/user:before switch
06:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
07:message/developer:<tool_search_sources>\n- Deferred built-in or extension tools (n...
08:message/assistant:before switch
09:message/user:<SUMMARIZATION_PROMPT>

## Post-Compaction Follow-up Request (Next Model)
00:message/developer[4]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <configured_developer_instructions state="removed" />
    [03] <personality_spec>Use the following communication style for futu...
    [04] <skills_usage_instructions>\n## How to use skills\n- Use the sma...
01:message/developer:<multi_agent_usage_hint state="removed" />
02:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
03:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
04:message/user:<COMPACTION_SUMMARY>\nPRE_SAMPLING_SUMMARY
05:message/developer[4]:
    [01] <model_switch>\nThe user was previously using a different model....
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <configured_developer_instructions state="removed" />
    [04] <personality_spec>Use the following communication style for futu...
06:message/developer:<multi_agent_usage_hint state="removed" />
07:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
08:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
09:message/user:after switch
10:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
11:message/developer:<tool_search_sources>\n- Deferred built-in or extension tools (n...
