codex-rs/core/tests/suite/snapshots/core_thread_state__suite__compact__pre_turn_compaction_context_window_exceeded_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Pre-turn auto-compaction context-window failure: compaction request excludes the incoming user message and the turn errors.\",\n&[(\"Local Compaction Request (Incoming User Excluded)\", &requests[1]),])"
---
Scenario: Pre-turn auto-compaction context-window failure: compaction request excludes the incoming user message and the turn errors.

## Local Compaction Request (Incoming User Excluded)
00:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
03:message/developer:<NO_TEXT>
04:message/developer:<personality_spec>Use the following communication style for futu...
05:message/user:USER_ONE
06:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
07:message/developer:<tool_search_sources>\n- Deferred built-in or extension tools (n...
08:message/assistant:FIRST_REPLY
09:message/user:<SUMMARIZATION_PROMPT>
