codex-rs/core/tests/suite/snapshots/core_thread_state__suite__compact__pre_turn_compaction_including_incoming_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Pre-turn auto-compaction with a context override emits the context diff in the compact request while the incoming user message is still excluded.\",\n&[(\"Local Compaction Request\", &requests[2]),\n(\"Local Post-Compaction History Layout\", &requests[3]),])"
---
Scenario: Pre-turn auto-compaction with a context override emits the context diff in the compact request while the incoming user message is still excluded.

## Local Compaction Request
00:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<skills_usage_instructions>\n## How to use skills\n- Use the sma...
03:message/developer:<NO_TEXT>
04:message/developer:<personality_spec>Use the following communication style for futu...
05:message/user:USER_ONE
06:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
07:message/assistant:FIRST_REPLY
08:message/user:USER_TWO
09:message/assistant:SECOND_REPLY
10:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <personality_spec>Use the following communication style for futu...
    [03] <skills_usage_instructions>\n## How to use skills\n- Use the sma...
01:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
02:message/user:<ENVIRONMENT_CONTEXT:cwd=PRETURN_CONTEXT_DIFF_CWD>
03:message/user:<COMPACTION_SUMMARY>\nPRE_TURN_SUMMARY
04:message/user[2]:
    [01] <input_image:detail,image_url>
    [02] USER_THREE
05:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
