codex-rs/core/tests/suite/snapshots/core_thread_state__suite__compact__pre_turn_compaction_strips_incoming_model_switch_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Pre-turn compaction during model switch (without pre-sampling model-switch compaction): current behavior strips incoming <model_switch> from the compact request and restores it in the post-compaction follow-up request.\",\n&[(\"Initial Request (Previous Model)\", &requests[0]),\n(\"Local Compaction Request\", &requests[1]),\n(\"Local Post-Compaction History Layout\", &requests[2]),])"
---
Scenario: Pre-turn compaction during model switch (without pre-sampling model-switch compaction): current behavior strips incoming <model_switch> from the compact request and restores it in the post-compaction follow-up request.

## Initial Request (Previous Model)
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <personality_spec>Use the following communication style for futu...
01:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
02:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user:BEFORE_SWITCH_USER
04:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...

## Local Compaction Request
00:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/developer:<NO_TEXT>
03:message/developer:<personality_spec>Use the following communication style for futu...
04:message/user:BEFORE_SWITCH_USER
05:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
06:message/assistant:BEFORE_SWITCH_REPLY
07:message/user:<SUMMARIZATION_PROMPT>

## Local Post-Compaction History Layout
00:message/developer[3]:
    [01] <model_switch>\nThe user was previously using a different model....
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <personality_spec>Use the following communication style for futu...
01:message/developer:<multi_agent_mode>Do not spawn sub-agents unless the user or app...
02:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
03:message/user:<COMPACTION_SUMMARY>\nPRETURN_SWITCH_SUMMARY
04:message/user:BEFORE_SWITCH_USER
05:message/user:AFTER_SWITCH_USER
06:message/developer:<exhaustive_scope_feasibility>\nBefore committing to an exhausti...
